[metadata]
name = web_app
version = 0.1
author=maverick
author_email=maverick@github.com


[options]
packages = find:

[options.packages.find] (always `find` even if `find_namespaces:` was used before)
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
where=src
include=*
exclude=